Changed some elements

--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
   </head>
   <body>
     <div class="card">
-      <div class="title"></div>
+      <div class="title">ADVICE #117</div>
       <div class="advice">
         <p>
+          "It is easy to sit up and take notice, what's difficult is getting up
+          and taking action."
         </p>
       </div>
       <div class="divider">
